USING RENDER TO MAKE HTTP REQUESTS

--- a/login/templates/login/inicio.html
+++ b/login/templates/login/inicio.html
@@ -5,11 +5,9 @@ Inicio
 {%endblock%}
 
 {%block content%}
-
-<p> 
-    Usuarios:
-    asdsf
-    
-</p>
-
+{% for level in all_users%}
+<li>
+    <a href="/inicio/{{Rol.id}}/"> {{Rol.nombre}} </a>
+</li>
+{% endfor %}
 {%endblock%}
